deploy/030-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: device-management
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"device-management:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
  labels:
    app.kubernetes.io/part-of: device-management
    app.kubernetes.io/name: device-management
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: device-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name: device-management
    spec:
      containers:
        - name: app
          image: device-management:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              port: http
          readinessProbe:
            httpGet:
              port: http
