deploy/050-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: device-management
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: device-management-drogue-public-temperature.apps.wonderful.iot-playground.org
      http:
        paths:
          - backend:
              service:
                name: device-management
                port:
                  name: http
            path: /
            pathType: Prefix
